; ModuleID = '/home/carl/AnghaBench/linux/drivers/macintosh/extr_windfarm_pm91.c_wf_smu_new_control.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/macintosh/extr_windfarm_pm91.c_wf_smu_new_control.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wf_control = type { i32 }

@wf_smu_all_controls_ok = common dso_local global i32 0, align 4
@fan_cpu_main = common dso_local global %struct.wf_control* null, align 8
@.str = private unnamed_addr constant [15 x i8] c"cpu-rear-fan-0\00", align 1
@fan_cpu_second = common dso_local global %struct.wf_control* null, align 8
@.str.1 = private unnamed_addr constant [15 x i8] c"cpu-rear-fan-1\00", align 1
@fan_cpu_third = common dso_local global %struct.wf_control* null, align 8
@.str.2 = private unnamed_addr constant [16 x i8] c"cpu-front-fan-0\00", align 1
@cpufreq_clamp = common dso_local global %struct.wf_control* null, align 8
@.str.3 = private unnamed_addr constant [14 x i8] c"cpufreq-clamp\00", align 1
@fan_hd = common dso_local global %struct.wf_control* null, align 8
@.str.4 = private unnamed_addr constant [14 x i8] c"drive-bay-fan\00", align 1
@fan_slots = common dso_local global %struct.wf_control* null, align 8
@.str.5 = private unnamed_addr constant [10 x i8] c"slots-fan\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wf_control*)* @wf_smu_new_control to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wf_smu_new_control(%struct.wf_control* %0) #0 {
  %2 = alloca %struct.wf_control*, align 8
  store %struct.wf_control* %0, %struct.wf_control** %2, align 8
  %3 = load i32, i32* @wf_smu_all_controls_ok, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %5, label %6

5:                                                ; preds = %1
  br label %121

6:                                                ; preds = %1
  %7 = load %struct.wf_control*, %struct.wf_control** @fan_cpu_main, align 8
  %8 = icmp eq %struct.wf_control* %7, null
  br i1 %8, label %9, label %22

9:                                                ; preds = %6
  %10 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  %11 = getelementptr inbounds %struct.wf_control, %struct.wf_control* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @strcmp(i32 %12, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %22, label %15

15:                                               ; preds = %9
  %16 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  %17 = call i64 @wf_get_control(%struct.wf_control* %16)
  %18 = icmp eq i64 %17, 0
  br i1 %18, label %19, label %21

19:                                               ; preds = %15
  %20 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  store %struct.wf_control* %20, %struct.wf_control** @fan_cpu_main, align 8
  br label %21

21:                                               ; preds = %19, %15
  br label %22

22:                                               ; preds = %21, %9, %6
  %23 = load %struct.wf_control*, %struct.wf_control** @fan_cpu_second, align 8
  %24 = icmp eq %struct.wf_control* %23, null
  br i1 %24, label %25, label %38

25:                                               ; preds = %22
  %26 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  %27 = getelementptr inbounds %struct.wf_control, %struct.wf_control* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @strcmp(i32 %28, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0))
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %38, label %31

31:                                               ; preds = %25
  %32 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  %33 = call i64 @wf_get_control(%struct.wf_control* %32)
  %34 = icmp eq i64 %33, 0
  br i1 %34, label %35, label %37

35:                                               ; preds = %31
  %36 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  store %struct.wf_control* %36, %struct.wf_control** @fan_cpu_second, align 8
  br label %37

37:                                               ; preds = %35, %31
  br label %38

38:                                               ; preds = %37, %25, %22
  %39 = load %struct.wf_control*, %struct.wf_control** @fan_cpu_third, align 8
  %40 = icmp eq %struct.wf_control* %39, null
  br i1 %40, label %41, label %54

41:                                               ; preds = %38
  %42 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  %43 = getelementptr inbounds %struct.wf_control, %struct.wf_control* %42, i32 0, i32 0
  %44 = load i32, i32* %43, align 4
  %45 = call i32 @strcmp(i32 %44, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %54, label %47

47:                                               ; preds = %41
  %48 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  %49 = call i64 @wf_get_control(%struct.wf_control* %48)
  %50 = icmp eq i64 %49, 0
  br i1 %50, label %51, label %53

51:                                               ; preds = %47
  %52 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  store %struct.wf_control* %52, %struct.wf_control** @fan_cpu_third, align 8
  br label %53

53:                                               ; preds = %51, %47
  br label %54

54:                                               ; preds = %53, %41, %38
  %55 = load %struct.wf_control*, %struct.wf_control** @cpufreq_clamp, align 8
  %56 = icmp eq %struct.wf_control* %55, null
  br i1 %56, label %57, label %70

57:                                               ; preds = %54
  %58 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  %59 = getelementptr inbounds %struct.wf_control, %struct.wf_control* %58, i32 0, i32 0
  %60 = load i32, i32* %59, align 4
  %61 = call i32 @strcmp(i32 %60, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.3, i64 0, i64 0))
  %62 = icmp ne i32 %61, 0
  br i1 %62, label %70, label %63

63:                                               ; preds = %57
  %64 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  %65 = call i64 @wf_get_control(%struct.wf_control* %64)
  %66 = icmp eq i64 %65, 0
  br i1 %66, label %67, label %69

67:                                               ; preds = %63
  %68 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  store %struct.wf_control* %68, %struct.wf_control** @cpufreq_clamp, align 8
  br label %69

69:                                               ; preds = %67, %63
  br label %70

70:                                               ; preds = %69, %57, %54
  %71 = load %struct.wf_control*, %struct.wf_control** @fan_hd, align 8
  %72 = icmp eq %struct.wf_control* %71, null
  br i1 %72, label %73, label %86

73:                                               ; preds = %70
  %74 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  %75 = getelementptr inbounds %struct.wf_control, %struct.wf_control* %74, i32 0, i32 0
  %76 = load i32, i32* %75, align 4
  %77 = call i32 @strcmp(i32 %76, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.4, i64 0, i64 0))
  %78 = icmp ne i32 %77, 0
  br i1 %78, label %86, label %79

79:                                               ; preds = %73
  %80 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  %81 = call i64 @wf_get_control(%struct.wf_control* %80)
  %82 = icmp eq i64 %81, 0
  br i1 %82, label %83, label %85

83:                                               ; preds = %79
  %84 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  store %struct.wf_control* %84, %struct.wf_control** @fan_hd, align 8
  br label %85

85:                                               ; preds = %83, %79
  br label %86

86:                                               ; preds = %85, %73, %70
  %87 = load %struct.wf_control*, %struct.wf_control** @fan_slots, align 8
  %88 = icmp eq %struct.wf_control* %87, null
  br i1 %88, label %89, label %102

89:                                               ; preds = %86
  %90 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  %91 = getelementptr inbounds %struct.wf_control, %struct.wf_control* %90, i32 0, i32 0
  %92 = load i32, i32* %91, align 4
  %93 = call i32 @strcmp(i32 %92, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.5, i64 0, i64 0))
  %94 = icmp ne i32 %93, 0
  br i1 %94, label %102, label %95

95:                                               ; preds = %89
  %96 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  %97 = call i64 @wf_get_control(%struct.wf_control* %96)
  %98 = icmp eq i64 %97, 0
  br i1 %98, label %99, label %101

99:                                               ; preds = %95
  %100 = load %struct.wf_control*, %struct.wf_control** %2, align 8
  store %struct.wf_control* %100, %struct.wf_control** @fan_slots, align 8
  br label %101

101:                                              ; preds = %99, %95
  br label %102

102:                                              ; preds = %101, %89, %86
  %103 = load %struct.wf_control*, %struct.wf_control** @fan_cpu_main, align 8
  %104 = icmp ne %struct.wf_control* %103, null
  br i1 %104, label %105, label %121

105:                                              ; preds = %102
  %106 = load %struct.wf_control*, %struct.wf_control** @fan_cpu_second, align 8
  %107 = icmp ne %struct.wf_control* %106, null
  br i1 %107, label %111, label %108

108:                                              ; preds = %105
  %109 = load %struct.wf_control*, %struct.wf_control** @fan_cpu_third, align 8
  %110 = icmp ne %struct.wf_control* %109, null
  br i1 %110, label %111, label %121

111:                                              ; preds = %108, %105
  %112 = load %struct.wf_control*, %struct.wf_control** @fan_hd, align 8
  %113 = icmp ne %struct.wf_control* %112, null
  br i1 %113, label %114, label %121

114:                                              ; preds = %111
  %115 = load %struct.wf_control*, %struct.wf_control** @fan_slots, align 8
  %116 = icmp ne %struct.wf_control* %115, null
  br i1 %116, label %117, label %121

117:                                              ; preds = %114
  %118 = load %struct.wf_control*, %struct.wf_control** @cpufreq_clamp, align 8
  %119 = icmp ne %struct.wf_control* %118, null
  br i1 %119, label %120, label %121

120:                                              ; preds = %117
  store i32 1, i32* @wf_smu_all_controls_ok, align 4
  br label %121

121:                                              ; preds = %5, %120, %117, %114, %111, %108, %102
  ret void
}

declare dso_local i32 @strcmp(i32, i8*) #1

declare dso_local i64 @wf_get_control(%struct.wf_control*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
